--- a/package.json
+++ b/package.json
@@ -1,37 +1,46 @@
 {
-  "name": "ratatouille",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.4",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@types/jest": "^29.5.2",
-    "@types/node": "18.16.17",
-    "@types/react": "18.2.11",
-    "@types/react-dom": "18.2.4",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.5",
-    "husky": "^8.0.3",
-    "immer": "^10.0.2",
-    "jest": "^29.5.0",
-    "nanoid": "^4.0.2",
-    "next": "13.4.5",
-    "prettier": "^2.8.8",
-    "pretty-quick": "^3.1.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-redux": "^8.0.7",
-    "ts-jest": "^29.1.0",
-    "ts-node": "^10.9.1",
-    "typescript": "5.1.3"
-  }
+	"name": "ratatouille",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"test": "vitest --ui"
+	},
+	"dependencies": {
+		"@emotion/react": "^11.11.1",
+		"@emotion/styled": "^11.11.0",
+		"@mui/icons-material": "^5.11.16",
+		"@mui/material": "^5.13.4",
+		"@reduxjs/toolkit": "^1.9.5",
+		"@types/jest": "^29.5.2",
+		"@types/node": "18.16.17",
+		"@types/react": "18.2.11",
+		"@types/react-dom": "18.2.4",
+		"eslint": "8.42.0",
+		"eslint-config-next": "13.4.5",
+		"husky": "^8.0.3",
+		"immer": "^10.0.2",
+		"jest": "^29.5.0",
+		"nanoid": "^4.0.2",
+		"next": "13.4.5",
+		"prettier": "^2.8.8",
+		"pretty-quick": "^3.1.3",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-redux": "^8.0.7",
+		"ts-jest": "^29.1.0",
+		"ts-node": "^10.9.1",
+		"typescript": "5.1.3"
+	},
+	"devDependencies": {
+		"@testing-library/react": "^15.0.7",
+		"@vitejs/plugin-react": "^4.2.1",
+		"@vitest/ui": "^1.6.0",
+		"jsdom": "^24.0.0",
+		"vite-tsconfig-paths": "^4.3.2",
+		"vitest": "^1.6.0"
+	}
 }
